// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expressions > arithmetics > handles chained math with precedence 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 3,
      "code": "Const",
    },
    {
      "arg1": -1,
      "code": "Const",
    },
    {
      "code": "Mul",
    },
    {
      "code": "Pow",
    },
    {
      "arg1": 4,
      "code": "Const",
    },
    {
      "code": "Mul",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "arg1": 6,
      "code": "Const",
    },
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "code": "Mod",
    },
    {
      "code": "Div",
    },
    {
      "code": "Sub",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > and 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "code": "And",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > and short-circuit 1`] = `
{
  "main": [
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "whatever",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "And",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > compare 1`] = `
{
  "main": [
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "arg1": 456,
      "code": "Const",
    },
    {
      "code": "Lt",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > deep eq 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "code": "DeepEq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > eq 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > eq ref 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > eq ref 2 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > in finds existing key 1`] = `
{
  "main": [
    {
      "arg1": {
        "name": "key",
        "symbol": "atom:key",
      },
      "code": "Const",
    },
    {
      "arg1": {
        "name": "key",
        "symbol": "atom:key",
      },
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "name": "key2",
        "symbol": "atom:key2",
      },
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Record",
    },
    {
      "code": "In",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > not on boolean 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "code": "Not",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > not on not boolean 1`] = `
{
  "main": [
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "code": "Not",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > or 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "code": "Or",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > or short-circuit 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "whatever",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Or",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > data structures > record literal 1`] = `
{
  "main": [
    {
      "arg1": {
        "name": "a",
        "symbol": "atom:a",
      },
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "name": "b",
        "symbol": "atom:b",
      },
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Record",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > data structures > record with computed keys 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 3,
      "code": "Const",
    },
    {
      "arg1": 4,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Record",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > data structures > tuple literal 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > fn increment 1`] = `
{
  "fn_54": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "line_handled_count",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "arg1": {
        "ref": "line_handled_count",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "line_handled_count",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "line_handled_count",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "line_handled_count",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": "fn_54",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "inc",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "inc",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "inc",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_74",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_74",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "line_handled_count",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > function call multiple args 1`] = `
{
  "fn_34": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_34",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_45",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_45",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 2,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > immediately invoked function expression (iife) 1`] = `
{
  "fn_17": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_17",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_23",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_23",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > pipe 1`] = `
{
  "fn_30": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_40": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Mul",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_40",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_44",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_30",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_45",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_45",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_44",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > return from function 1`] = `
{
  "fn_62": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_62",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_68",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_68",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > Y combinator computes factorial 1`] = `
{
  "fn_183": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_272",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_272",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_273",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_273",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_185": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_271",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_183",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_271",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_213": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_275",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_275",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_276",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_276",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_215": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_274",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_213",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_274",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_217": [
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_185",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_270",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_215",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_270",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_262": [
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 9,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 23,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_277",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "arg1": {
        "ref": "_calltmp_277",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Mul",
    },
    {
      "code": "Return",
    },
  ],
  "fn_263": [
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_262",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_217",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_269",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_263",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_269",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_278",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_278",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > Y combinator computes fibonacci 1`] = `
{
  "fn_195": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_298",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_298",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_299",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_299",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_197": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_297",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_195",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_297",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_225": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_301",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_301",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_302",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_302",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_227": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_300",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_225",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_300",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_229": [
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_197",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_296",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_227",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_296",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_288": [
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 9,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "arg1": 39,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 16,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 39,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_303",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "arg1": {
        "ref": "_calltmp_303",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_304",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "arg1": {
        "ref": "_calltmp_304",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_289": [
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_288",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_229",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_295",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_289",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_295",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_305",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 6,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_305",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > apply combinator 1`] = `
{
  "fn_61": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_75",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_75",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_62": [
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_61",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_67": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_62",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_74",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_67",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_74",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_76",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 42,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_76",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > church pair returns first element 1`] = `
{
  "fn_100": [
    {
      "arg1": {
        "ref": "a",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "fn_101": [
    {
      "arg1": {
        "ref": "a",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_100",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_83": [
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_105",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_105",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_106",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_106",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_84": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_83",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_85": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_84",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_85",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_104",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_104",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_107",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_107",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_108",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_101",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_108",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > church pair returns second element 1`] = `
{
  "fn_100": [
    {
      "arg1": {
        "ref": "b",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "b",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "fn_101": [
    {
      "arg1": "fn_100",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_83": [
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_105",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_105",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_106",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_106",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_84": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_83",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_85": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_84",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_85",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_104",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_104",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_107",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_107",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_108",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_101",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_108",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > deeply nested closures capture outer bindings 1`] = `
{
  "fn_55": [
    {
      "arg1": {
        "ref": "z",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Add",
    },
    {
      "arg1": {
        "ref": "z",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_56": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_55",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_57": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_56",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_57",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_78",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_78",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_79",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 3,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_79",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "adder",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "adder",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "adder",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_80",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_80",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > either combinator applies first branch 1`] = `
{
  "fn_109": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_118": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "code": "Return",
    },
  ],
  "fn_94": [
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_122",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_122",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_95": [
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_94",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_96": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_95",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_96",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_121",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_121",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_123",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_109",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_123",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_124",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_118",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_124",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > fixed point combinator (Z) builds recursion 1`] = `
{
  "fn_165": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_215",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_215",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_216",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_216",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_167": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_214",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_165",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_214",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_195": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_218",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_218",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_219",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_219",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_197": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_217",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_195",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_217",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_199": [
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_167",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_213",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_197",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_213",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_205": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "fn_206": [
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_205",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_199",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_212",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_206",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_212",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_220",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 42,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_220",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > mutual recursion (even/odd) with fixed point combinator 1`] = `
{
  "fn_253": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_503",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_503",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_504",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_504",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_255": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_502",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_253",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_502",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_283": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_506",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_506",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_507",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_507",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_285": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_505",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_283",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_505",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_287": [
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_255",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_501",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_285",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_501",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_354": [
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 9,
      "code": "JumpIfFalse",
    },
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": 27,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 16,
      "code": "JumpIfFalse",
    },
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "arg1": 27,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_509",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "arg1": {
        "ref": "_calltmp_509",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_355": [
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_354",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_424": [
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 9,
      "code": "JumpIfFalse",
    },
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "arg1": 27,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 16,
      "code": "JumpIfFalse",
    },
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": 27,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_511",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "arg1": {
        "ref": "_calltmp_511",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_425": [
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_424",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_287",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "Y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "Y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "Y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_508",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_355",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_508",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "even",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "even",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "Y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_510",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_425",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_510",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "odd",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "odd",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "even",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_512",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_512",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "odd",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_513",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_513",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "even",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_514",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_514",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "odd",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_515",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_515",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": 4,
      "code": "Tuple",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > partial application keeps captured value 1`] = `
{
  "fn_41": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_42": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_41",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_42",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_58",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_58",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_59",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_59",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > memory ops > alloc stores value and returns it via load 1`] = `
{
  "main": [
    {
      "arg1": 42,
      "code": "Const",
    },
    {
      "arg1": "alloc",
      "arg2": 1,
      "code": "Native",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > memory ops > alloc stores value and returns it via load 2`] = `
{
  "26": 42,
}
`;

exports[`expressions > memory ops > free removes stored value 1`] = `
{
  "main": [
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "arg1": "alloc",
      "arg2": 1,
      "code": "Native",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": "free",
      "arg2": 1,
      "code": "Native",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > pattern matching > with 'is' operator 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_9",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "_calltmp_9",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > pattern matching > with constant value does not match 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_9",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "_calltmp_9",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > pattern matching > with constant value matches 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_9",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "_calltmp_9",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > pattern matching > with placeholder 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_9",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > block returns last expression 1`] = `
{
  "main": [
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > else if chain 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": 4,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "arg1": 9,
      "code": "Jump",
    },
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "arg1": 8,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 789,
      "code": "Const",
    },
    {
      "arg1": 9,
      "code": "Jump",
    },
    {
      "arg1": 456,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > empty block returns null 1`] = `
{
  "main": [
    {
      "arg1": null,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > for loop maps values 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 3,
      "code": "Const",
    },
    {
      "arg1": 3,
      "code": "Tuple",
    },
    {
      "arg1": {
        "ref": "_calltmp_49",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "tuple": [],
      },
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_50",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_51",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "_calltmp_51",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_49",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Length",
    },
    {
      "code": "Lt",
    },
    {
      "arg1": 42,
      "code": "JumpIfFalse",
    },
    {
      "arg1": {
        "ref": "_calltmp_49",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_51",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Index",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Mul",
    },
    {
      "arg1": {
        "ref": "_calltmp_50",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Append",
    },
    {
      "arg1": {
        "ref": "_calltmp_50",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "_calltmp_51",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "arg1": {
        "ref": "_calltmp_51",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 12,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "_calltmp_50",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > if matches pattern and binds 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_29",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "_calltmp_29",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "a",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": 13,
      "code": "JumpIfFalse",
    },
    {
      "arg1": {
        "ref": "a",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > if then else expression 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": 4,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "arg1": 5,
      "code": "Jump",
    },
    {
      "arg1": 456,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > if then expression 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": 3,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > if with negated match falls back to else 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_29",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "_calltmp_29",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "a",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "code": "Not",
    },
    {
      "arg1": 12,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "arg1": 16,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "a",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > label break returns value 1`] = `
{
  "main": [
    {
      "arg1": null,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_50",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_50",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 10,
      "code": "Jump",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_50",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "_calltmp_50",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > label continue loops until break 1`] = `
{
  "main": [
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": null,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_171",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 3,
      "code": "Const",
    },
    {
      "code": "Lt",
    },
    {
      "arg1": 22,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 8,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_171",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 29,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "_calltmp_171",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "_calltmp_171",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > loop break yields value 1`] = `
{
  "main": [
    {
      "arg1": null,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_20",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 42,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_20",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 8,
      "code": "Jump",
    },
    {
      "arg1": 3,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "_calltmp_20",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > post increment returns old value and updates binding 1`] = `
{
  "main": [
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_41",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "_calltmp_41",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "_calltmp_41",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > sequencing returns last expression 1`] = `
{
  "main": [
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "arg1": 234,
      "code": "Const",
    },
    {
      "arg1": 345,
      "code": "Const",
    },
    {
      "arg1": 456,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > while loop continue skips iteration 1`] = `
{
  "main": [
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "count",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "count",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": null,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_143",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "code": "Lt",
    },
    {
      "arg1": 41,
      "code": "JumpIfFalse",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 32,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 13,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "count",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "arg1": {
        "ref": "count",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "count",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 13,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "_calltmp_143",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "count",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > structured programming > while loop with break returns value 1`] = `
{
  "main": [
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": null,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_94",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "code": "Lt",
    },
    {
      "arg1": 32,
      "code": "JumpIfFalse",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 3,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 31,
      "code": "JumpIfFalse",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_94",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 32,
      "code": "Jump",
    },
    {
      "arg1": 8,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "_calltmp_94",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > symbols > creates a named symbol 1`] = `
{
  "main": [
    {
      "arg1": "foo",
      "code": "Const",
    },
    {
      "arg1": "symbol",
      "arg2": 1,
      "code": "Native",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > symbols > symbol equality is by identity, atoms are by name 1`] = `
{
  "main": [
    {
      "arg1": "a",
      "code": "Const",
    },
    {
      "arg1": "symbol",
      "arg2": 1,
      "code": "Native",
    },
    {
      "arg1": {
        "ref": "s",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "s",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": "a",
      "code": "Const",
    },
    {
      "arg1": "symbol",
      "arg2": 1,
      "code": "Native",
    },
    {
      "arg1": {
        "ref": "t",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "t",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "s",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "t",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > atom 1`] = `
{
  "main": [
    {
      "arg1": {
        "name": "atom",
        "symbol": "atom:atom",
      },
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > false 1`] = `
{
  "main": [
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > float 1`] = `
{
  "main": [
    {
      "arg1": 123.456,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > integer 1`] = `
{
  "main": [
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > string 1`] = `
{
  "main": [
    {
      "arg1": "string",
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > string template 1`] = `
{
  "main": [
    {
      "arg1": "hello ",
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Concat",
    },
    {
      "arg1": " world",
      "code": "Const",
    },
    {
      "code": "Concat",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > true 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`vm2 integration > adds two numbers and prints the sum 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "arg1": "print",
      "arg2": 1,
      "code": "Native",
    },
    {
      "code": "Return",
    },
  ],
}
`;
